# ChessSDL

./: meson.build
assets/: states.xml
include/: AnimatedGraphic.hpp  ChessBoard.hpp  Enemy.hpp  Game.hpp  GameObject.hpp  GameObjectFactory.hpp  GameOverState.hpp  GameState.hpp  GameStateMachine.hpp  InputHandler.hpp  Layer.hpp  Level.hpp  LevelParser.hpp  LoaderParams.hpp  MainMenuState.hpp  MenuButton.hpp  MenuState.hpp  ObjectLayer.hpp  PauseState.hpp  PlayState.hpp  Player.hpp  SDLGameObject.hpp  SelectPlayerState.hpp  StateParser.hpp  Texture.hpp  TextureManager.hpp  TileLayer.hpp  Turn.hpp  Vector2D.hpp
include/ChessPieces/: Bishop.hpp  ChessPiece.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rook.hpp
include/Figures/: Circle.hpp  Color.hpp  Rectangle.hpp  sdl_headers.hpp
src/: AnimatedGraphic.cpp  ChessBoard.cpp  Enemy.cpp  Game.cpp  GameObjectFactory.cpp  GameOverState.cpp  GameStateMachine.cpp  InputHandler.cpp  Level.cpp  LevelParser.cpp  LoaderParams.cpp  MainMenuState.cpp  MenuButton.cpp  ObjectLayer.cpp  PauseState.cpp  PlayState.cpp  Player.cpp  SDLGameObject.cpp  SelectPlayerState.cpp  StateParser.cpp  Texture.cpp  TextureManager.cpp  TileLayer.cpp  Vector2D.cpp  main.cpp
src/ChessPieces/: Bishop.cpp  ChessPiece.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
src/Figures/: Circle.cpp  Color.cpp  Rectangle.cpp
